--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			</head>
 			<body style="background-color: Cyan">
 
-            <a href="file:///C:/Users/dell7470/Desktop/bridge%20program/DIGITAL%20LITERA/INS113/check1.2.html"> clink on this link to view the following page</a>
+            <a href="check1.2.html"> clink on this link to view the following page</a>
 
        
 
